--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>タイトルサンプル</title>
+        <title>Railsチュートリアル「HTML編」</title>
         <meta charset="utf-8">
     </head>
     <body>
-        <p>Hello, world!</p>
+        <h1>Learn Enoughのあらまし</h1>
+        <p>
+            『Learn Enough to Be Dangerous』は、技術の成熟（technial spohistication）を世に広める運動のリーダーです。
+        </p>
+        <img src="images/kitten.jpg" alt="かわいいねこ">
+        <img src="https:/example.com/images/kitten.jpg" alt="かわいい別世界の猫">
+        <h2>創立までの流れ</h2>
+        <p>
+            『Learn Enough to Be Dangerous』は<a href="https://railstutorial.jp/">Ruby on Railsチュートリアル</a>事業および<a href="https://www.softcover.io/">Softcover: 出版プラットフォーム</a>事業から必然的に生まれました。このページは、<a href="https://railstutorial.jp/html"><em>Railsチュートリアル「HTML編」</em></a>で用いるサンプルWebサイトの一部です。同署では、World Wide webで全面的に利用されている言語であるHTML（<strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage）の基礎が学べます。
+            そのほかのチュートリアル情報にご興味がある方は、<a href="https://railstutorial.jp/path">コンテンツ一覧</a>をどうぞご覧ください。
+        </p>
+        <h2>創立メンバー</h2>
+        <p>
+            『Learn Enough to Be Dangerous』は2015年にマイケル・ハートル、リー・ドナヒュー…
+            <strong>10億人</strong><em><strong>italic</strong></em>
+        </p>
+        <h3>マイケル・ハートル</h3>
+        <p>マイケルのTwitter
+            <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">ここをクリック</a>
+        </p>
+        <h3>リー・ドナヒュー</h3>
+        <p>
+            リーのTwitter
+            <a href="https://twitter.com/leedonahoe" target="_blank">ここをクリック</a>
+        </p>
+        <h3>ニック・メルウィン</h3>
+        <p>
+            ニックのTwitter
+            <a href="https://twitter.com/nickmerwin">ここをクリック</a>
+        </p>
+        <a href="https://learnenough.com/email">公式メーリングリストはこちらから！</a>
     </body>
 </html>
