--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             『Learn Enough to Be Dangerous』は、技術の成熟（technial spohistication）を世に広める運動のリーダーです。
         </p>
         <img src="images/kitten.jpg" alt="かわいいねこ">
-        <img src="https:/example.com/images/kitten.jpg" alt="かわいい別世界の猫">
+        <img src="https://example.com/images/kitten.jpg" alt="かわいい別世界の猫">
         <h2>創立までの流れ</h2>
         <p>
             『Learn Enough to Be Dangerous』は<a href="https://railstutorial.jp/">Ruby on Railsチュートリアル</a>事業および<a href="https://www.softcover.io/">Softcover: 出版プラットフォーム</a>事業から必然的に生まれました。このページは、<a href="https://railstutorial.jp/html"><em>Railsチュートリアル「HTML編」</em></a>で用いるサンプルWebサイトの一部です。同署では、World Wide webで全面的に利用されている言語であるHTML（<strong>H</strong>yper<strong>T</strong>ext <strong>M</strong>arkup <strong>L</strong>anguage）の基礎が学べます。
@@ -22,6 +22,8 @@
             <strong>10億人</strong><em><strong>italic</strong></em>
         </p>
         <h3>マイケル・ハートル</h3>
+        <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150"
+     alt="マイケル・ハートル">
         <p>マイケルのTwitter
             <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">ここをクリック</a>
         </p>
