Add a tags page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <p>
             『Learn Enough to Be Dangerous』は、技術の成熟（technial spohistication）を世に広める運動のリーダーです。
         </p>
-        <img src="images/kitten.jpg" alt="かわいいねこ">
+        <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329"><img src="images/kitten.jpg" alt="かわいいねこ"></a>
         <img src="https://example.com/images/kitten.jpg" alt="かわいい別世界の猫">
         <h2>創立までの流れ</h2>
         <p>
@@ -28,15 +28,24 @@
             <a href="https://twitter.com/mhartl" target="_blank" rel="noopener">ここをクリック</a>
         </p>
         <h3>リー・ドナヒュー</h3>
+        <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150"
+     alt="リー・ドナヒュー">
         <p>
             リーのTwitter
             <a href="https://twitter.com/leedonahoe" target="_blank">ここをクリック</a>
         </p>
         <h3>ニック・メルウィン</h3>
+        <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
+     alt="ニック・メルウィン">
         <p>
             ニックのTwitter
             <a href="https://twitter.com/nickmerwin">ここをクリック</a>
         </p>
         <a href="https://learnenough.com/email">公式メーリングリストはこちらから！</a>
+        <p>
+            <a href="https://twitter.com/RailsTutorialJP" target="_blank" rel="noopener" style="text-decoration: none;">
+                <img src="images/small_twitter_logo.png" alt="Twitter links">
+            </a>
+        </p>
     </body>
 </html>
