--- a/tags.html
+++ b/tags.html
@@ -58,6 +58,21 @@
                 <td>表のデータ（table data）</td>
                 <td>この中に表のセルデータを置く</td>
             </tr>
+            <tr>
+                <td><code>header</code></td>
+                <td>ヘッダー</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><code>div</code></td>
+                <td>ディビジョン</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td><code>span</code></td>
+                <td>スパン</td>
+                <td></td>
+            </tr>
         </table>
         
         <h2>インライン要素（inline element）</h2>
@@ -76,6 +91,27 @@
                 <td>テキストを軽く強調する</td>
                 <td><code>技術の成熟（&lt;em&gt;technical sophistication&lt;/em&gt;）</code></td>
                 <td>技術の成熟（<em>technical sophistication</em></td>
+            </tr>
+            <tr>
+                <td><code>strong</code></td>
+                <td>強調</td>
+                <td>テキストを強調する</td>
+                <td><code>&lt;strong&gt;少なくとも10億人&lt;/strong&gt;</code></td>
+                <td><strong>少なくとも10億人</strong></td>
+            </tr>
+            <tr>
+                <td><code>a</code></td>
+                <td>アンカー（anchor）</td>
+                <td>ハイパーリンクにする</td>
+                <td><code>&lt;a href="https://learnenough.com/"&gt;Learn Enough&lt;/a&gt;</code></td>
+                <td><a href="https://learnenogh.com/">Learn Enough</a></td>
+            </tr>
+            <tr>
+                <td><code>img</code></td>
+                <td>画像（image）</td>
+                <td>画像を配置する</td>
+                <td><code>&lt;img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"&gt;</code></td>
+                <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
             </tr>
         </table>
     </body>
