--- a/tags.html
+++ b/tags.html
@@ -73,6 +73,21 @@
                 <td>スパン</td>
                 <td></td>
             </tr>
+            <tr>
+                <td><code>ol</code></td>
+                <td>オーダードリスト</td>
+                <td>順序付きリスト</td>
+            </tr>
+            <tr>
+                <td><code>ul</code></td>
+                <td>アンオーダードリスト</td>
+                <td>順序なしリスト</td>
+            </tr>
+            <tr>
+                <td><code>li</code></td>
+                <td>リスト</td>
+                <td>olおよびulで使うリスト要素</td>
+            </tr>
         </table>
         
         <h2>インライン要素（inline element）</h2>
