--- a/index.html
+++ b/index.html
@@ -6,12 +6,28 @@
     </head>
     <body>
 
-        <div>
+        <div style="text-align: right;">
             <a href="index.html">homeページ</a>
-            <a href="tags.html">HTMLタグ一覧</a>
-            <a href="moby_dick.html">読書案内『Moby Dick』</a>
+            <a href="tags.html" style="margin-left: 10px;">HTMLタグ一覧</a>
+            <a href="moby_dick.html" style="margin: 0 0 0 10px;">読書案内『Moby Dick』</a>
         </div>
         <h1>Learn Enoughのあらまし</h1>
+        <img src="images/kitten.jpg" alt="An adorable kitten">
+
+        <TAG style="text-align: center; display: block; font-style: italic; font-weight: bold; font-size: 30px;">名言</TAG>
+
+        <p>
+            本Webサイトでは、世界中から集めた多くの猫ちゃん動画のほかに、様々な名言も普段に掲載されている。
+        </p>
+
+        <blockquote style="padding: 2px 20px; background: #c9c9c9;">
+            <p>
+                <em>インターネット上で見つけた名言をうのみにしてはならない。</em>
+                <br>
+                —エイブラハム・リンカーン（Abraham Lincoln）
+            </p>
+        </blockquote>
+
         <p>
             『Learn Enough to Be Dangerous』は、技術の成熟（technial spohistication）を世に広める運動のリーダーです。
         </p>
