--- a/tags.html
+++ b/tags.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <div>
+        <div style="text-align: right;">
             <a href="index.html">homeページ</a>
-            <a href="tags.html">HTMLタグ一覧</a>
-            <a href="moby_dick.html">読書案内『Moby Dick』</a>
+            <a href="tags.html" style="margin: 0 0 0 10px;">HTMLタグ一覧</a>
+            <a href="moby_dick.html" style="margin: 0 0 0 10px;">読書案内『Moby Dick』</a>
         </div>
 
         <h1>重要なHTMLタグ一覧</h1>
@@ -34,7 +34,7 @@
                 <th>目的</th>
             </tr>
             <tr>
-                <td><code>h1</code>&ndash;<code>h6</code></td>
+                <td style="padding: 10px;"><code>h1</code>&ndash;<code>h6</code></td>
                 <td>見出し（heading）</td>
                 <td>この中に見出しを置く（レベル： 1&ndash;6）</td>
             </tr>
