--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,13 +3,14 @@
     <head>
         <title>Moby Dick（白鯨）</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="css/main.css">
         
     </head>
     <body>
-        <div style="text-align: right;">
-            <a href="index.html">homeページ</a>
-            <a href="tags.html" style="margin: 0 0 0 10px;">HTMLタグ一覧</a>
-            <a href="moby_dick.html" style="margin: 0 0 0 10px;">読書案内『Moby Dick』</a>
+        <div class="nav-menu">
+            <a href="index.html" class="nav-space">homeページ</a>
+            <a href="tags.html"  class="nav-space">HTMLタグ一覧</a>
+            <a href="moby_dick.html"  class="nav-space">読書案内『Moby Dick』</a>
         </div>
 
         <!--スタイルをもっと追加すること（最後のセクションで行う予定）-->
